--- a/Python_Basic_StudyNotes.ipynb
+++ b/Python_Basic_StudyNotes.ipynb
@@ -2054,18 +2054,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "100"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'mylist' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-98bf87362951>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmylist\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'mylist' is not defined"
+     ]
     }
    ],
    "source": [
@@ -3141,18 +3142,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'dog_check' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-f1169020a4ec>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdog_check\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'my Dog ran away'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'dog_check' is not defined"
+     ]
     }
    ],
    "source": [
@@ -3161,179 +3163,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#functional prameters  *args and **kwarges\n",
-    "\n",
-    "def myfunc(a,b,c=0,d=0,e=0): #a and b a positional arguments\n",
-    "    #accept two numbers\n",
-    "    return sum((a,b,c,d,e))*0.05 #needs to pass as tuple"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10.0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "myfunc(40,60,100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def myfunc(*args): #the args can pass as many variable as wants, the arges will perform aas tuples\n",
-    "    return sum(args)*0.05 #the args can be replacement as any phases, but use arges is easy for others to read your code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5.0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "myfunc(40,60)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def myfunc(**kwargs):\n",
-    "    if 'fruit' in kwargs: #treat as a dict\n",
-    "        print('my fruit of choice is {}'.format(kwargs['fruit']))\n",
-    "    else:\n",
-    "        print('cannot find any fruits')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "my fruit of choice is apple\n"
-     ]
-    }
-   ],
-   "source": [
-    "myfunc(fruit = 'apple')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def myfunc(*args,**kwargs): #all the args first then kwargs\n",
-    "    print('I would like {}{}'.format(args[0],kwargs['food']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I would like 10orange\n"
-     ]
-    }
-   ],
-   "source": [
-    "myfunc(10,20,30,food='orange')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#practice problems\n",
-    "\n",
-    "def lesser_of_two_evens(a,b):\n",
-    "    return min(a,b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lesser_of_two_evens(2,4)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def animal_crackers(text):\n",
-    "    wordlist = text.split()\n",
-    "    return wordlist[0][0] == wordlist[1][0]"
+    "#Pig Latin Practice\n",
+    "def pig_latin(word):\n",
+    "    first_letter = word[0]\n",
+    "    \n",
+    "    #check vowel\n",
+    "    if first_letter in 'aeiou':\n",
+    "        pig_word = word + 'ay'\n",
+    "    else:\n",
+    "        pig_word = word[1:] + first_letter + 'ay'\n",
+    "        \n",
+    "    return pig_word\n",
+    "        "
    ]
   },
   {
@@ -3344,7 +3189,7 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "'ordway'"
       ]
      },
      "execution_count": 10,
@@ -3353,22 +3198,66 @@
     }
    ],
    "source": [
-    "animal_crackers('level eliama')"
+    "pig_latin('word')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def makes_twenty(n1,n2):\n",
-    "    if n1 + n2 == 20 or n1 == 20 or n2 == 20:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False #or use return directly\n",
-    "    # def makes_twenty(n1,n2)\n",
-    "      return (n1+n2)==20 or n1==20 or n2==20"
+    "# *args and **kwargs  arguments and key word arguments \n",
+    "# args returns tuple, key work argu returns dictionary "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#map function\n",
+    "def square(num):\n",
+    "    return num**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_nums = [1,2,3,4,5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "for item in map(square, my_nums):\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in map(square, my_nums): print(item)"
    ]
   },
   {
@@ -3379,7 +3268,7 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "[1, 4, 9, 16, 25]"
       ]
      },
      "execution_count": 15,
@@ -3388,40 +3277,80 @@
     }
    ],
    "source": [
-    "makes_twenty(10,30)"
+    "list(map(square,my_nums))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fliter function\n",
+    "def check_even(num):\n",
+    "    return num%2==0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mynums = [1,2,3,4,5,6]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def old_macdonald(name): #capitalize the first and fourth char\n",
-    "    if len(name) > 3:\n",
-    "        return name[:3].capitalize() + name[3:].capitalize()\n",
-    "    else:\n",
-    "        return 'Name is too short'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'MacDonald'"
+       "[2, 4, 6]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "old_macdonald('macdonald')"
+    "#\n",
+    "list(filter(check_even,mynums))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-21-d1034aea2e02>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-21-d1034aea2e02>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    for n in filter(check_num, mynums)\u001b[0m\n\u001b[1;37m                                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "#same\n",
+    "for n in filter(check_num, mynums)\n",
+    "    print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = 2\n",
+    "def square(num):\n",
+    "    result = num**2\n",
+    "    return result"
    ]
   },
   {
@@ -3433,17 +3362,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.<lambda>(num)>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Lambda function\n",
+    "lambda num: num**2 #same space for function especilly for functions only use once "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#find 33\n",
-    "\n",
-    "def has_33(nums):\n",
-    "    for i in range(0, len(nums) -1):\n",
-    "        if nums[i:i+2] == [3,3]:\n",
-    "            return True\n",
-    "    return False"
+    "names = ['lee','lucy','lily']"
    ]
   },
   {
@@ -3454,7 +3398,7 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "['l', 'l', 'l']"
       ]
      },
      "execution_count": 30,
@@ -3463,27 +3407,7 @@
     }
    ],
    "source": [
-    "has_33([1,2,3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "has_33([1,3,3])"
+    "list(map(lambda name: name[0],names))"
    ]
   },
   {
@@ -3491,7 +3415,110 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#nest statements\n",
+    "x = 25  # if print then this one will print first\n",
+    "#LEGB Rule \n",
+    "\n",
+    "# L: Local\n",
+    "# E: Enclosing function locals\n",
+    "# G: Clobal(module)\n",
+    "# B: Built-in (Python)\n",
+    "\n",
+    "def printer():\n",
+    "    x = 50\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Test LEGB\n",
+    "x = 100\n",
+    "\n",
+    "def func():\n",
+    "    global x #avoid to use it \n",
+    "    print(f'X is {x}')\n",
+    "    \n",
+    "    x = 200 #only have scope local in this function\n",
+    "    print(f'Local is {x}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X is 100\n",
+      "Local is 200\n"
+     ]
+    }
+   ],
+   "source": [
+    "func()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "func() takes 0 positional arguments but 1 was given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-3a1e4dca446a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: func() takes 0 positional arguments but 1 was given"
+     ]
+    }
+   ],
+   "source": [
+    "func(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x) # x=200 is in the function local "
+   ]
   }
  ],
  "metadata": {
@@ -3510,7 +3537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
